# jaehong21-book

./: .gitignore  Dockerfile  pyproject.toml
.gitea/workflows/: deploy.yaml
.github/workflows/: deploy.yaml
src/: book.py  data.yaml
