[project]
name = "book"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "jaehong21", email = "dev@jaehong21.com" }]
dependencies = [
    "streamlit>=1.41.0",
    "watchdog>=6.0.0",
    "pyyaml>=6.0.2",
]
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
